# solar_os

./: README.md  platformio.ini  sdkconfig.defaults  sdkconfig.defaults.odroid_go
boards/: esp32_s3_devkitc1_n16r8.cmake  odroid_go.cmake  waveshare_esp32_s3_rlcd_4_2.cmake
boards/drivers/: audio_es8311_es7210.cmake  audio_esp32_dac.cmake  display_ili9341.cmake  spi_esp_idf.cmake  storage_sdspi.cmake
components/stb_image/: stb_image_port.c
components/u8g2/: CMakeLists.txt
components/webp_decoder/: CMakeLists.txt  solar_os_webp_decoder.c
components/webp_decoder/include/: solar_os_webp_decoder.h
components/webp_decoder/libwebp/src/utils/: utils.c
doc/: apps.md  commands.md  jobs.md  solar_os_boards.md  solar_os_lua.md  solar_os_python.md
flavors/: netrunner.toml
fonts/: .gitignore  README.md
include/: solar_os_board.h
include/boards/: esp32_s3_devkitc1_n16r8.h  odroid_go.h  waveshare_esp32_s3_rlcd_4_2.h
schemas/: solaros-firmware-manifest.example.json  solaros-release-index.example.json
scripts/: generate_flavor_config.py  platformio_solaros_flavor.py
src/: CMakeLists.txt  main.c  solar_os_jobs.c  solar_os_jobs.h
src/apps/: solar_os_app_registry.c  solar_os_audio_apps.c  solar_os_chat.c  solar_os_chat_app.h  solar_os_clock.c  solar_os_com.c  solar_os_curl.c  solar_os_docview.c  solar_os_edit.c  solar_os_files.c  solar_os_fontdemo.c  solar_os_fontdemo.h  solar_os_invaders.c  solar_os_less.c  solar_os_lua.c  solar_os_notes.c  solar_os_plot.c  solar_os_python.c  solar_os_reader.c  solar_os_scp.c  solar_os_shell.c  solar_os_view.c  solar_os_web.c  (+1 more)
(+58 files in other folders)
